Fix wrapping column

--- a/src/components/TraceTreeGrid/TraceTreeGrid.less
+++ b/src/components/TraceTreeGrid/TraceTreeGrid.less
@@ -24,6 +24,12 @@
     }
 }
 
+.servive-cell {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .cell-values {
     position: absolute;
     right: 10px;
